[package]
name = "note_rusty"
version = "0.1.0"
authors = ["Andrew Shulaev <ash.drone@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4"
linked-hash-map = "0.5"
iron = "0.6"
mime = "0.3"
router = "0.6"
urlencoded = "0.6"
params = "0.8"
lopdf = "0.26.0"
encoding = "0.2.33"

[lib]
name = "note_rusty"
path = "src/lib.rs"
