[package]
name = "note_rusty"
version = "0.1.0"
authors = ["Andrew Shulaev <ash.drone@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linked-hash-map = "0.5"
mime = "0.3"
lopdf = "0.26.0"
encoding = "0.2.33"
rand = "0.8.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3.0"
glob = "0.3.0"

[lib]
name = "note_rusty"
path = "src/lib.rs"
